Deploying the CEED website with MkDocs

--- a/ceed7am/index.html
+++ b/ceed7am/index.html
@@ -375,7 +375,7 @@ addition to gathering together many of the CEED researchers, the meeting will
 include representatives of the ECP management, hardware vendors, software
 technology, and other interested projects.</p>
 <h3 id="venue">Venue</h3>
-<p>The meeting will take place at the University of California Livermore Collaboration Center (UCLCC).</p>
+<p>The meeting will take place at the <a href="https://goo.gl/maps/BEQxeQSfxB9ee7h47">University of California Livermore Collaboration Center (UCLCC)</a> which is just outside of LLNL's East Gate.</p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3157.358039878656!2d-121.7001545245485!3d37.68778967200738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fe163a1270b93%3A0xfd6db0227dc72426!2sUniversity%20of%20California%20Livermore%20Collaboration%20Center!5e0!3m2!1sen!2sus!4v1690851366106!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 <h3 id="meeting-format">Meeting Format</h3>
