Deploying the CEED website with MkDocs

--- a/ceed7am/index.html
+++ b/ceed7am/index.html
@@ -415,7 +415,7 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>9:30-10:00</td>
-<td><strong>Exascale: A User's Perspective</strong> <br> Paul Fischer (UIUC) <br> <em>We will present user experiences on peta- and exascale platforms.</em></td>
+<td><strong>Exascale Poisson Solvers for Incompressible Navier-Stokes</strong> <br> Paul Fischer (UIUC) <br> <em>We will present user experiences on peta- and exascale platforms.</em></td>
 </tr>
 <tr>
 <td>10:00-10:30</td>
