Deploying the CEED website with MkDocs

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -426,6 +426,10 @@
 <li>CEED-MS40 report: <a href="../docs/ceed-ms40-report.pdf">Support ECP applications in their exascale challenge problem runs</a>.</li>
 </ul>
 <h3 id="publications">Publications</h3>
+<h4 id="2023">2023</h4>
+<ol>
+<li>Yichen Guo, Eric de Sturler, and Tim Warburton, <a href="https://arxiv.org/abs/2305.10965">Stopping Criteria for the Conjugate Gradient Algorithm in High-Order Finite Element Methods</a>, <em>in review</em>, <strong>2023</strong>. Also available as <a href="https://arxiv.org/abs/2305.10965">arXiv:2305.10965</a>.</li>
+</ol>
 <h4 id="2022">2022</h4>
 <ol>
 <li>W. Pazner, Tz. Kolev, and C. Dohrmann, <a href="https://arxiv.org/abs/2203.02465">Low-order preconditioning for the high-order finite element de Rham complex</a>, <em>in review</em>, <strong>2022</strong>. Also available as <a href="https://arxiv.org/abs/2203.02465">arXiv:2203.02465</a>.</li>
