--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@ The CEED software will also include optimized assembly support for low-order met
 <div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
+       <li> <a href="./news/#llnl-recaps-7-years-of-ceed">&#9658;&nbsp;LLNL recaps 7 years of CEED</a> </li>
        <li> <a href="./news/#ceed-annual-meeting-2023">&#9658;&nbsp;CEED annual mtg (August 1-3)</a> </li>
        <li> <a href="./news/#software-release-mfem-v452">&#9658;&nbsp;MFEM v4.5.2 released</a> </li>
        <li> <a href="./news/#software-release-libceed-v0100">&#9658;&nbsp;libCEED v0.10 released</a> </li>
