Deploying the CEED website with MkDocs

--- a/software/index.html
+++ b/software/index.html
@@ -310,20 +310,20 @@
 <a href="https://github.com/ceed">GitHub</a>. The latest releases of our main software
 components are available from:</p>
 <p><center>
-<a href="../ceed-5.0/"><button type="button" class="btn btn-primary">
-<strong>&nbsp;&nbsp;CEED-5.0&nbsp;&nbsp;</strong>
+<a href="ceed-6.0.md"><button type="button" class="btn btn-primary">
+<strong>&nbsp;&nbsp;CEED-6.0&nbsp;&nbsp;</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/mfem/mfem/releases/tag/v4.5"><button type="button" class="btn btn-primary">
-<strong>mfem-4.5</strong>
+<a href="https://github.com/mfem/mfem/releases/tag/v4.6"><button type="button" class="btn btn-primary">
+<strong>mfem-4.6</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/Nek5000/nekRS/releases/tag/v22.0"><button type="button" class="btn btn-primary">
-<strong>nekRS-22.0</strong>
+<a href="https://github.com/Nek5000/nekRS/releases/tag/v23.0"><button type="button" class="btn btn-primary">
+<strong>nekRS-23.0</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/CEED/libCEED/releases/tag/v0.10.0"><button type="button" class="btn btn-primary">
-<strong>libCEED-0.10</strong>
+<a href="https://github.com/CEED/libCEED/releases/tag/v0.12.0"><button type="button" class="btn btn-primary">
+<strong>libCEED-0.12</strong>
 </button></a>
 <!--
 &nbsp;&nbsp;&nbsp;
@@ -333,7 +333,7 @@ components are available from:</p>
 -->
 &nbsp;&nbsp;&nbsp;
 <a href="https://github.com/paranumal/libparanumal/releases/tag/v0.5.0"><button type="button" class="btn btn-primary">
-<strong>libParanumal-0.5.0</strong>
+<strong>libParanumal-0.5</strong>
 </button></a>
 </center></p>
 <p><center>
@@ -351,24 +351,24 @@ components are available from:</p>
 klzzwxh:0053</a>
 -->
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/libocca/occa/releases/tag/v1.4.0"><button type="button" class="btn btn-primary">
-<strong>OCCA-1.4</strong>
+<a href="https://github.com/libocca/occa/releases/tag/v1.6.0"><button type="button" class="btn btn-primary">
+<strong>OCCA-1.6</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://bitbucket.org/icl/magma/commits/tag/v2.6.2"><button type="button" class="btn btn-primary">
-<strong>MAGMA-2.6.2</strong>
+<a href="https://bitbucket.org/icl/magma/commits/tag/v2.7.2"><button type="button" class="btn btn-primary">
+<strong>MAGMA-2.7.2</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
 <a href="https://github.com/CEED/FMS/releases/tag/v0.2"><button type="button" class="btn btn-primary">
 <strong>FMS-0.2</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/SCOREC/core/releases/tag/v2.2.7"><button type="button" class="btn btn-primary">
-<strong>PUMI-2.2.7</strong>
+<a href="https://github.com/SCOREC/core/releases/tag/v2.2.8"><button type="button" class="btn btn-primary">
+<strong>PUMI-2.2.8</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://github.com/SCOREC/omega_h/releases/tag/scorec-v10.5.0"><button type="button" class="btn btn-primary">
-<strong>Omega_h-10.5.0</strong>
+<a href="https://github.com/SCOREC/omega_h/releases/tag/scorec-v10.7.0"><button type="button" class="btn btn-primary">
+<strong>Omega_h-10.7</strong>
 </button></a></p>
 <p></center></p>
 <p>Please use the <a href="https://github.com/CEED/forum">CEED user forum</a> to report
