Deploying the CEED website with MkDocs

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -425,6 +425,10 @@
 <ul>
 <li>CEED-MS40 report: <a href="../docs/ceed-ms40-report.pdf">Support ECP applications in their exascale challenge problem runs</a>.</li>
 </ul>
+<p><a href="https://doi.org/10.5281/zenodo.10023494"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.10023494.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS41 report: <a href="../docs/ceed-ms41-report.pdf">Document and popularize CEED-developed software and standards</a>.</li>
+</ul>
 <h3 id="publications">Publications</h3>
 <h4 id="2023">2023</h4>
 <ol>
